--- a/front-end/package.json
+++ b/front-end/package.json
@@ -12,6 +12,7 @@
     "node-sass": "^8.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^4.8.0",
     "react-scripts": "5.0.1",
     "react-tooltip": "^5.10.5",
